added junit test